@@ -2,6 +2,8 @@ PHP 4.0 CHANGE LOG                                                    ChangeLog
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ?? 1999, Version 4.0 Beta 3
+- Improved the performance of the MySQL module significantly by using the new
+  high-performance Zend function API.
 - Add support for the Easysoft ODBC-ODCB Bridge (martin@easysoft.com)
 - Fix bug in odbc_setoption, getParameter call incorrect (martin@easysoft.com)
 - Ora_Fetch_Into now resets the returned array in all cases (Thies) 
